--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -773,10 +773,13 @@
                     <p>
                         Tack för att du har anmält dig till en kompisfika!<br><br> 
                         
+                        Under sommaren kan det förekomma lite väntetid innan du blir matchad med en ny kompis. Däremot kan du 
+                        fortfarande anmäla dig precis som vanligt och vi gör vårt bästa för att matcha dig så snart vi kan.<br><br>  
+                        
                         Så här går det till:<br><br>
                         
-                        1. Matchning. Vi mailar dig (oftast inom 1-30 dagar) när vi har hittat en bra matchning som har liknande 
-                        intressen som du har. (Om du skulle behöva komplettera din ansökan meddelar vi dig om detta.)<br><br>
+                        1. Matchning. Vi mailar dig när vi har hittat en bra matchning som har liknande intressen som du har. 
+                        (Om du skulle behöva komplettera din ansökan meddelar vi dig om detta.)<br><br>
                         
                         2. Bestäm ett datum. Du mailar personen inom 7 dagar och bestämmer datum, tid och plats. Skriv gärna 
                         på svenska och engelska. Det är bådas ansvar att ni etablerar kontakt med varandra. Kom ihåg att 
@@ -792,12 +795,16 @@
                     </p>
                     <p>
                         Bästa hälsningar,<br />
-                        Alla på Kompisbyrån
+                        Vännerna på Kompisbyrån
 
                     <p>----------------------<br /></p>
                     <p>
                         Thank you for making a Fika friend request through Kompisbyrån!<br /><br />
-                        
+                       
+                        During summer there might be some additional waiting time before we match you up with a new friend. 
+                        However, you can still apply for new friends as usual and we will do our best to find you someone as soon as 
+                        possible.<br><br>              
+
                         This is how it works:<br><br>
                         
                         1. Match. We will send you an email (often within 1-30 days) when we have found a good match who has 
@@ -817,7 +824,7 @@
                     </p>
                     <p>
                         Best regards,<br />
-                        Kompisbyrån
+                        Your friends at Kompisbyrån
 
                     </p>]]></target>
             </trans-unit>
@@ -833,12 +840,14 @@
                         <p>Hej!<br /></p>
                         <p>
                           Tack för att du har anmält dig som Musikkompis!<br><br> 
+                           
+                          Under sommaren kan det förekomma lite väntetid innan du blir matchad med en ny kompis. Däremot kan du 
+                          fortfarande anmäla dig precis som vanligt och vi gör vårt bästa för att matcha dig så snart vi kan.<br><br>
                           
                           Så här går det till:<br><br>
                             
-                            1. Matchning. Vi mailar dig (oftast inom 1-30 dagar) när vi har hittat en ny Musikkompis som har 
-                            liknande intressen som du har. (Om du skulle behöva komplettera din ansökan meddelar vi dig om 
-                            detta.)<br><br>
+                            1. Matchning. Vi mailar dig när vi har hittat en ny Musikkompis som har liknande intressen som du har. 
+                            (Om du skulle behöva komplettera din ansökan meddelar vi dig om detta.)<br><br>
                             
                             2. Bestäm ett datum. Du mailar personen inom 7 dagar och bestämmer datum, tid och plats. 
                             Skriv gärna på svenska och engelska. Det är bådas ansvar att ni etablerar kontakt med varandra. 
@@ -854,16 +863,20 @@
                         </p>
                         <p>
                             Bästa hälsningar,<br />
-                            Alla på Kompisbyrån
+                            Vännerna på Kompisbyrån
 
                         <p>----------------------<br /></p>
                         <p>
                             Thank you for making a Music friend request through Kompisbyrån!<br /><br />
                             
+                            During summer there might be some additional waiting time before we match you up with a new friend. 
+                            However, you can still apply for new friends as usual and we will do our best to find you someone as 
+                            soon as possible.<br><br> 
+
                             This is how it works:<br><br>
                             
-                            1. Match. We will send you an email (often within 1-30 days) when we have found a new FK/MK who 
-                            has similar interests as you. (If you need to complete your application, we will let you know)<br><br>
+                            1. Match. We will send you an email when we have found a new friend who has similar interests as you. 
+                            (If you need to complete your application, we will let you know)<br><br>
                             
                             2. Decide a date. You send an email to the person within 7 days, and decide date, time and place. 
                             Write in Swedish or English (some find Google Translate as a good tool). It is the responsibility 
@@ -880,7 +893,7 @@
                         </p>
                         <p>
                             Best regards,<br />
-                            Kompisbyrån
+                           Your friends at Kompisbyrån
 
                         </p>]]></target>
             </trans-unit>
@@ -895,11 +908,15 @@
                     <p>
                     Hej %firstName%!<br><br>
 
-                    Vad roligt att du har anmält dig som Startkompis hos oss på Kompisbyrån! Med detta email vill vi bekräfta att vi har tagit emot din anmälan.<br><br>
+                    Vad roligt att du har anmält dig som Startkompis hos oss på Kompisbyrån! Med detta email vill vi bekräfta 
+                    att vi har tagit emot din anmälan.<br><br>
+
+                    Under sommaren kan det förekomma lite väntetid innan du blir matchad med en ny kompis. Däremot kan du 
+                    fortfarande anmäla dig precis som vanligt och vi gör vårt bästa för att matcha dig så snart vi kan.<br><br>
 
                     Här kommer en liten påminnelse om hur det går till:<br><br>
 
-                    <strong>1. Matchningen.</strong> Vi mailar dig (oftast inom 1-30 dagar) när vi har hittat en person som matchar din profil. Du får personens kontaktuppgifter och vi föreslår en dag, tid och plats då ni ska träffas. (Om du skulle behöva komplettera din ansökan meddelar vi dig om detta.)<br><br>
+                    <strong>1. Matchningen.</strong> Vi mailar dig när vi har hittat en person som matchar din profil. Du får personens kontaktuppgifter och vi föreslår en dag, tid och plats då ni ska träffas. (Om du skulle behöva komplettera din ansökan meddelar vi dig om detta.)<br><br>
 
                     <strong>2. Första kontakten.</strong> Du kontaktar personen inom 7 dagar och bekräftar ert möte. Skriv gärna på svenska och engelska. Du som är etablerad i Sverige har huvudansvaret för att ni får kontakt med varandra. Om tiden vi har föreslagit inte passar er måste du se till att ni hittar en ny tid som passar båda.<br>
                     Kom ihåg att respektera varandra, att inte svara påverkar den andra personen som har sett fram emot ert möte. Kontakta oss om du inte får svar så hjälper vi till!<br><br>
@@ -908,18 +925,25 @@
 
                     Om du har några frågor, vänligen skicka ett email till oss :)<br><br>
 
-                    Bästa hälsningar<br>
-                    Vi på Kompisbyrån<br><br>
+                    Bästa hälsningar,<br>
+                    Vännerna på Kompisbyrån<br><br>
 
                     -----English-----<br>
                     Hello!
 
-                    Thank you for your registration as Start friend (Startkompis)! With this email, we are confirming that we have received your application.<br><br> 
+                    Thank you for your registration as Start friend (Startkompis)! With this email, we are confirming that we have 
+                    received your application.<br><br>
+ 
+                    During summer there might be some additional waiting time before we match you up with a new friend. 
+                    However, you can still apply for new friends as usual and we will do our best to find you someone as 
+                    soon as possible.<br><br> 
 
-                    We will contact you again when we have found a person who matches your profile. You get the person's contact information and we propose a date, time and place of your meeting. (If you need to complete your application, we will let you know.)<br><br>
+                    We will contact you again when we have found a person who matches your profile. You get the person's contact 
+                    information and we propose a date, time and place of your meeting. (If you need to complete your application, 
+                    we will let you know.)<br><br>
 
-                    Best regard,<br>
-                    Kompisbyrån<br><br>
+                    Best regards,<br>
+                    Your friends at Kompisbyrån<br><br>
 
                     -----العربية-----<br>
 
