Update of welcome mail
Update of welcome mail for summer

--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -773,18 +773,22 @@
                 <target><![CDATA[
                     <p>Thank you for making a Fika friend request through Kompisbyrån!</p>
                     <p>
+			During summer there might be some additional waiting time before we match you up with a new friend. 
+			However, you can still apply for new friends and we will do our best to find you someone as soon as 
+			possible.<br><br>
+  
                         This is how it works:<br><br>
                         
-                        1. Match. We will send you an email (often within 1-30 days) when we have found new Fika friend for 
-                        you who has similar interests as you. (If you need to complete your application, we will let you know)<br><br>
+                        1. Match. We will send you an email when we have found a new Fika friend who has similar interests as 
+			you. (If you need to complete your application, we will let you know)<br><br>
                         
                         2. Decide a date. You send an email to the person within 7 days, and decide date, time and place. 
-                        Write in Swedish or English (some find Google Translate as a good tool). It is the responsibility 
-                        of both that you establish contact. Remember to respect each other, not responding an email will 
-                        affect the other person who has been looking forward to a meeting. Contact us if you don’t get answer.<br><br> 
+                        Write in Swedish or English (some find Google Translate to be a good tool). It is the responsibility 
+                        of both that you establish contact. Remember to respect each other, not responding to an email will 
+                        affect the other person who has been looking forward to a meeting. Contact us if you don’t get an answer.<br><br> 
                         
                         3. Meeting. You meet at a café or other public place for about 1 hour. Try not to have high 
-                        expectations but take it as it comes. Be in time! The boring meetings is when someone doesn’t 
+                        expectations but take it as it comes. Be on time! The dull meetings are when someone doesn’t 
                         show up, so please exchange telephone numbers and send a text message reminder the day before 
                         your meeting, that the other person confirm.<br><br> 
                                                 
@@ -792,7 +796,7 @@
                     </p>
                     <p>
                         Best regards,<br />
-                        Kompisbyrån
+                        Your friends at Kompisbyrån
                     </p>]]></target>
             </trans-unit>
             <trans-unit id="email.welcome.music.subject">
@@ -804,18 +808,22 @@
                 <target><![CDATA[
                     <p>Thank you for making a Music friend request through Kompisbyrån!</p>
                     <p>
+			During summer there might be some additional waiting time before we match you up with a new friend. 
+			However, you can still apply for new friends and we will do our best to find you someone as soon as 
+			possible.<br><br>	
+			
                        This is how it works:<br><br>
                         
-                        1. Match. We will send you an email (often within 1-30 days) when we have found a new Music friend 
+                        1. Match. We will send you an email when we have found a new Music friend 
                         who has similar interests as you. (If you need to complete your application, we will let you know)<br><br>
                         
                         2. Decide a date. You send an email to the person within 7 days, and decide date, time and place. 
-                        Write in Swedish or English (some find Google Translate as a good tool). It is the responsibility 
-                        of both that you establish contact. Remember to respect each other, not responding an email will 
-                        affect the other person who has been looking forward to a meeting. Contact us if you don’t get answer.<br><br> 
+                        Write in Swedish or English (some find Google Translate to be a good tool). It is the responsibility 
+                        of both that you establish contact. Remember to respect each other, not responding to an email will 
+                        affect the other person who has been looking forward to a meeting. Contact us if you don’t get an answer.<br><br> 
                         
                         3. Meeting. You meet at a café or other public place for about 1 hour. Try not to have high 
-                        expectations but take it as it comes. Be in time! The boring meetings is when someone doesn’t 
+                        expectations but take it as it comes. Be on time! The dull meetings are when someone doesn’t 
                         show up, so please exchange telephone numbers and send a text message reminder the day before 
                         your meeting, that the other person confirm.<br><br> 
                         
@@ -823,7 +831,7 @@
                     </p>
                     <p>
                         Best regards,<br />
-                        Kompisbyrån
+                        Your friends at Kompisbyrån
                     </p>]]></target>
             </trans-unit>
             <trans-unit id="email.welcome.start.subject">
@@ -838,10 +846,14 @@
                     Dear %firstName%!<br><br>
 
                     Thank you for your registration as Start friend (Startkompis)! With this email, we are confirming that we have received your application.<br><br>
+			
+		    During summer there might be some additional waiting time before we match you up with a new friend. 
+	            However, you can still apply for new friends and we will do our best to find you someone as soon as 
+		    possible.<br><br>
 
                     Here is a short reminder of how it works:<br><br>
 
-                    <strong>1. Match.</strong> We will send you an email (usually within 1-30 days) when we have found a person who matches your profile. You get the person's contact information and we propose a date, time and place of your meeting. (If you need to complete your application, we will let you know.)<br><br>
+                    <strong>1. Match.</strong> We will send you an email when we have found a person who matches your profile. You get the person's contact information and we propose a date, time and place of your meeting. (If you need to complete your application, we will let you know.)<br><br>
 
                     <strong>2. First contact.</strong> You contact the person within 7 days and confirm your meeting. Please write in English and Swedish. It’s the primarily responsibility of the person who is established in Sweden, that you get in touch with each other. If the time we have proposed does not suit you, you must ensure that you find a new time that suits both.<br>
                     Remember to respect each other, not responding affect the other person who has been looking forward to your meeting. Contact us if you need help to get in touch!<br><br>
@@ -851,7 +863,7 @@
                     If you have any questions, please contact us!<br><br>
 
                     Best wishes<br>
-                    The Startkompis-team at Kompisbyrån
+                    Your friends at Kompisbyrån
                     </p>
                 ]]></target>
             </trans-unit>
