Addition of names and organizations

--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1105,8 +1105,16 @@
                             Comviq som stöttar Kompisbyråns kansli med mobiltelefoner.
                         </p>
                         <p>
-                            och Alexandra Arvidson,
+                            TS reklam som stått för Kompisbyråns collegetröjor och tygpåsar.
+                        </p>
+                        <p>
+                            inUse som tagit fram en UX-analys av Kompisbyrån anmälningsformulär.  
+                        </p>
+                        <p>
+                            och Alberto Nuñez
+                            Alexandra Arvidson,
                             Carl Lindström,
+                            Erik Blandin,
                             Gabriella Hernqvist,
                             Hanna Magnusson,
                             Hedda Grew,
