Addition of names and org:s ENG

--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1023,9 +1023,17 @@
                         <p>
                             Comviq that supports Kompisbyrån's office with cell phones.
                         </p>
+			<p>
+                            TS reklam that supports Kompisbyrån with sweatshirts and tote bags.
+                        </p>
                         <p>
-                        and Alexandra Arvidson,
+                            inUse who's provided Kompisbyrån with a UX-analyse of our registration process
+                        </p>	
+                        <p>
+                        and Alberto Nuñez,
+			Alexandra Arvidson,
                         Carl Lindström,
+			Erik Blandin,
                         Frida Benno-Hjerpe,
                         Gabriella Hernqvist,
                         Hanna Magnusson,
