Addition of names

--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -975,7 +975,7 @@
                             شكر خاص ل
                         </p>
                         <p>
-                            Carl Lindström, Frida Benno-Hjerpe, Gabriella Hernqvist, Hanna Magnusson, Hedda Grew, Jessie Moberg, Johanna Nordin, Jonas Ouadih, Mikael Öhrén, Noa Bachner, Sameer Marmary, Sebastian Stenlund, Stella Hernström och Stina Wäppling.
+                            Erik Blandin, Alberto Nuñez, Carl Lindström, Frida Benno-Hjerpe, Gabriella Hernqvist, Hanna Magnusson, Hedda Grew, Jessie Moberg, Johanna Nordin, Jonas Ouadih, Mikael Öhrén, Noa Bachner, Sameer Marmary, Sebastian Stenlund, Stella Hernström och Stina Wäppling.
                         </p>
                     ]]>
                 </target>
