--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1092,12 +1092,11 @@
                             <b>Office (in alphabetical order)</b><br> 
                             Clara Wäppling, projektledare, <a href="mailto:clara@kompisbyran.se">clara@kompisbyran.se</a><br>
                             Emma Hammar, grundare och verksamhetsledare, <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a><br>
-                            Linda Kaplan, operativ ledare och verksamhetsutvecklare, <a href="mailto:linda@kompisbyran.se">linda@kompisbyran.se</a><br>
                             Miriam Ghebressilasie, matchningsansvarig, <a href="mailto:miriam@kompisbyran.se">miriam@kompisbyran.se</a><br> 
                             <br>
                             <b>IT</b><br>
                             Jon Gotlin, IT-ansvarig<br>
-                            Andreas Lundquist, IT<br>
+                            Farhad Shams, IT<br>
                             <br>
                             <b>Kompisledare</b><br> 
                             Helena Rewucha, Kompisledare Göteborg<br> 
