Change of names AR

--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -1009,12 +1009,11 @@
                             Office (in alphabetical order) <br> 
                             Clara Wäppling, projektledare, <a href="mailto:clara@kompisbyran.se">clara@kompisbyran.se</a><br>
                             Emma Hammar, grundare och verksamhetsledare, <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a><br>
-                            Linda Kaplan, operativ ledare och verksamhetsutvecklare, <a href="mailto:linda@kompisbyran.se">linda@kompisbyran.se</a><br>
                             Miriam Ghebressilasie, matchningsansvarig, <a href="mailto:miriam@kompisbyran.se">miriam@kompisbyran.se</a><br> 
 
                             IT<br>
                             Jon Gotlin, IT-ansvarig<br>
-                            Andreas Lundquist, IT<br>
+                            Farhad Shams, IT<br>
 
                             Kompisledare<br> 
                             Helena Rewucha, Kompisledare Göteborg<br> 
