--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -524,7 +524,7 @@
             </trans-unit>
             <trans-unit id="user.settings.delete">
                 <source>user.settings.delete</source>
-                <target>Vill du inte längre vara medlem i Kompisbyrån kan du ta bort ditt konto.</target>
+                <target>Vill du ta bort ditt konto hos Kompisbyrån?</target>
             </trans-unit>
             <trans-unit id="user.settings.delete.button">
                 <source>user.settings.delete.button</source>
@@ -532,7 +532,7 @@
             </trans-unit>
             <trans-unit id="user.settings.delete.confirm">
                 <source>user.settings.delete.confirm</source>
-                <target>Är du säker på att du vill ta bort kontot? Du kan inte ångra dig.</target>
+                <target>Är du säker på att du vill ta bort ditt konto hos Kompisbyrån? Du kan inte ångra dig. Om du har kvar ditt konto hos oss kan du enkelt skicka in en förfrågan om att träffa en ny kompis.</target>
             </trans-unit>
             <trans-unit id="index.header">
                 <source>index.header</source>
