Addition to thank you-list

--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1093,6 +1093,9 @@
                         
                         <h3>Ett särskilt tack till...</h3>
                         <p>
+                            Magnus Malmstedt som tagit fram Kompisbyråns fina orangea logga.
+                        </p>
+                        <p>
                             Comviq som stöttar Kompisbyråns kansli med mobiltelefoner.
                         </p>
                         <p>
