Addition to thank you-list

--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1023,6 +1023,9 @@
                         
                         <h3>A special thanks to...</h3>
                         <p>
+                            Magnus Malmstedt who has created Kompisbyrån's beautiful orange logo.
+                        </p>
+			<p>
                             Comviq that supports Kompisbyrån's office with cell phones.
                         </p>
 			<p>
