Update of thank you-list

--- a/app/Resources/translations/messages.ar.xliff
+++ b/app/Resources/translations/messages.ar.xliff
@@ -964,7 +964,7 @@
                             <strong>Delicato</strong>
                         </p>
                         <p>
-                            <strong>The Start Friend municipalities:</strong> Nacka, Solna, Tyresö and Vaxholm. 
+                            <strong>The Start Friend municipalities:</strong> Nacka, Solna and Tyresö. 
                         </p>
                         <p>
                             شكر خاص ل
