Removal of contact adresses
Removal of contact adresses for Stockholm and Malmö + the word "musikkompis"

--- a/app/Resources/translations/messages.sv.xliff
+++ b/app/Resources/translations/messages.sv.xliff
@@ -1198,12 +1198,10 @@
                     <![CDATA[
                         <p>
                             Frågor?<br> 
-                            Fikakompis/Musikkompis: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>  
+                            Fikakompis: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>  
                             Startkompis: <a href="mailto:start@kompisbyran.se">start@kompisbyran.se</a><br>   
                             Göteborg: <a href="mailto:goteborg@kompisbyran.se">goteborg@kompisbyran.se</a><br>
-                            Kalmar: <a href="mailto:kalmar@kompisbyran.se">kalmar@kompisbyran.se</a><br>
-                            Malmö: <a href="mailto:malmo@kompisbyran.se">malmo@kompisbyran.se</a><br> 
-                            Stockholm: <a href="mailto:stockholm@kompisbyran.se">stockholm@kompisbyran.se</a><br> 
+                            Kalmar: <a href="mailto:kalmar@kompisbyran.se">kalmar@kompisbyran.se</a><br>                             
                             Örebro: <a href="mailto:orebro@kompisbyran.se">orebro@kompisbyran.se</a><br>                             
                             Event: <a href="mailto:event@kompisbyran.se">event@kompisbyran.se</a><br> 
                             Samarbete, rekrytering eller press: <a href="mailto:emma@kompisbyran.se ">emma@kompisbyran.se </a><br>   
