--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1129,11 +1129,9 @@
                 <target>
                     <![CDATA[
                         <p>
-                            Questions about the matching process for Fika or Music friend?<br>
+                            Questions about the matching process?<br>
                             Göteborg: <a href="mailto:goteborg@kompisbyran.se">goteborg@kompisbyran.se</a><br>
-                            Kalmar: <a href="mailto:kalmar@kompisbyran.se">kalmar@kompisbyran.se</a><br>
-                            Malmö: <a href="mailto:malmo@kompisbyran.se">malmo@kompisbyran.se</a><br>
-                            Stockholm: <a href="mailto:stockholm@kompisbyran.se">stockholm@kompisbyran.se</a><br>                            
+                            Kalmar: <a href="mailto:kalmar@kompisbyran.se">kalmar@kompisbyran.se</a><br>                           
                             Örebro: <a href="mailto:orebro@kompisbyran.se">orebro@kompisbyran.se</a><br>
                             Other cities: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
                             
