--- a/app/Resources/translations/messages.en.xliff
+++ b/app/Resources/translations/messages.en.xliff
@@ -1320,6 +1320,26 @@ If you want to, send us an e-mail at matchning@kompisbyran.se and tell us why yo
                 <source>open.confirm_meeting.clone.text</source>
                 <target>Om du vill få en ny matchning men vill ändra någon i din anmälan från förra gången loggar du in på %linkStart%din profil%linkEnd% och skickar in en ny förfrågan med de uppdaterade uppgifterna under rubriken "Jag vill träffa en ny person".</target>
             </trans-unit>
+            <trans-unit id="open.meet_again.header">
+                <source>open.meet_again.header</source>
+                <target>Ny kompismatchning</target>
+            </trans-unit>
+            <trans-unit id="open.meet_again.ingress">
+                <source>open.meet_again.ingress</source>
+                <target>Vad roligt att du vill få en ny kompismatchning. För att bli matchad med en ny fikakompis, tryck här:</target>
+            </trans-unit>
+            <trans-unit id="open.meet_again.button">
+                <source>open.meet_again.button</source>
+                <target>Matcha om mig</target>
+            </trans-unit>
+            <trans-unit id="open.meet_again.text">
+                <source>open.meet_again.text</source>
+                <target>Om du vill göra några ändringar i din profil sedan sist kan du logga in på din %linkStart%din profil%linkEnd% och göra dessa ändringar, samt skicka in din nya förfrågan därifrån istället.</target>
+            </trans-unit>
+            <trans-unit id="open.meet_again.after">
+                <source>open.meet_again.after</source>
+                <target>Klart! Vi hör av oss så snart vi har hittat en fikakompis till dig.</target>
+            </trans-unit>
             <trans-unit id="role.user">
                 <source>role.user</source>
                 <target>Användare</target>
